--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.username=root
 spring.datasource.password=Rkqldk2023@)@#
 
-#putty fan2meeting!@
+#putty fan2web!@
 
 # mybatis mapper path
 mybatis.mapper-locations=classpath:mapper/*.xml
